--- a/css/style_single.css
+++ b/css/style_single.css
@@ -485,6 +485,22 @@ footer {
     justify-content: center;
 }
 
+.submenu {
+    padding-left: 15px;
+}
+
+.viñeta {
+    border-width: 2px;
+    border-color: rgb(255, 255, 255);
+    border-style: solid;
+    position: absolute;
+    width: 6px;
+    height: 6px;
+    z-index: 274;
+	margin-left: -10px;
+   margin-top: 7px;
+}
+
 
 /*=============================================
 1.-RESPONSIVE PC
