--- a/css/style.css
+++ b/css/style.css
@@ -845,7 +845,7 @@ embed {
 .background-Area3 {
     background-color: var(--color_sub_background);
     margin-top: 80px;
-    margin-bottom: 80px;
+    margin-bottom: 400px;
 
 }
 
@@ -960,6 +960,89 @@ embed {
     display: grid;
     grid-template-rows: repeat(2, 0fr);
     grid-template-columns: repeat(5, 1fr);
+    padding: 25px;
+    width: 75%;
+    margin: auto;
+
+}
+
+.Instagram_feed {
+    background-color: var(--color_sub_background);
+}
+
+.arco {
+    position: absolute;
+    background-color: transparent;
+    width: 100px;
+    height: 100px;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    padding: 10px;
+    border-color: var(--gradient_main);
+    border-style: solid;
+    border-width: 5px;
+    display: flow-root;
+    margin-left: -120px;
+}
+
+.circle {
+    background-color: var(--gradient_main);
+    padding: 15px;
+    width: 70px;
+    height: 70px;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+}
+
+.logo_instagram {
+    width: 37px;
+}
+
+.instagram {
+    width: 32.335%;
+    margin: auto;
+    margin-bottom: auto;
+    display: flow-root;
+    margin-bottom: 20px;
+    padding-top: 20px;
+    position: relative;
+    height: auto;
+}
+
+.buttons_inst {
+    width: 15.55%;
+    margin: auto;
+    position: relative;
+    height: auto;
+    display: flex;
+}
+
+.button_inst_1 {
+    background-color: #182045;
+    color: var(--color_background);
+    border-color: transparent;
+    font-size: var(--font_h2_lato_pc);
+    font-family: var(--font-lato);
+    padding: 5px;
+    margin-right: 3px;
+}
+
+.button_inst_2 {
+    background-color: #b02221;
+    color: var(--color_background);
+    border-color: transparent;
+    font-size: var(--font_h2_lato_pc);
+    font-family: var(--font-lato);
+    padding: 5px;
+    display: flex;
+}
+
+.icon-instagram {
+    width: 15px;
+    margin-left: 6px;
+    margin-right: 6px;
 
 }
 
